# recipe-manager

./: Cargo.toml  README.md  build.rs  diesel.toml  schema_fix.patch
.github/workflows/: ci.yml  release-arm64-apple-macos.yml  release-macos-arm64-apple-macos.yml  release-macos-x86-64.yml  release-macos.yml  release-windows.yml  release-x86-64-macos.yml  release.yml  rust.yml
images/: appicon.icns
migrations/2023-06-20-003126_create_recipes/: down.sql  up.sql
src/: main.rs  ui.rs
src/database/: mod.rs  models.rs  schema.rs
src/import/: mod.rs  plist.rs
src/ui/: about.rs  calendar.rs  category.rs  category_list.rs  generate_rtf.rs  import.rs  ingredient_calories.rs  ingredient_list.rs  ingredient_replace.rs  query.rs  recipe.rs  recipe_list.rs  search.rs  unit_conversion.rs
