[package]
name = "recipe-manager"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel-derive-newtype = "2.1.0"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
directories = "5"
eframe = "0.29.0"
egui = "0.29.0"
plist = "1.7.0"
rfd = "0.15.0"
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
chrono = { version = "0.4.39", features = ["alloc", "clock"] }
egui_extras = { version = "0.29.1", features = ["chrono", "image"] }
egui-toast = "0.15.0"
open = "5.3.1"
thousands = "0.2.0"
image = "0.25.5"
simple_logger = "5.0.0"
log = "0.4.22"

[dev-dependencies]
maplit = "1.0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.19"

[package.metadata.bundle]
name = "Recipe Manager"
icon = ["images/appicon.icns"]
